# whisper-cli-rs

./: Cargo.toml  LICENSE  README.md  prem-registry.json
.github/workflows/: release.yml
src/: main.rs  whisper.rs
