[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "whisperd"
readme = "README.md"
homepage = "https://github.com/tiero/whisperd"
description = "HTTP server for the OpenAI Whisper speech-to-text model."
repository = "https://github.com/tiero/whisperd"
keywords = ["whisper", "openai", "cli", "transcribe", "serve"]
categories = ["command-line-utilities"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[[bin]]
name = "whisperd"
path = "src/main.rs"

[dependencies]
num = "0.4.1"
warp = "0.3.6"
dirs = "5.0.1"
anyhow = "1.0.75"
indicatif = "0.17.6"
hound = "3.5.1"
whisper-rs = "0.8.0"
futures-util = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"] }
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.3", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.20", features = ["blocking", "stream"] }
audrey = { version = "0.3.0", default-features = false, features = ["wav"] }
multipart = "0.18"
tempfile = "3.8.0"
hyper = "0.14.27"
multer = "2.1.0"

